--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
       display: block;
       margin: 0 auto 20px auto;
     }
+    <div class="info">
+  <h2 style="text-align:center;">Formulaire de réservation avec estimation de tarif</h2>
+  <p style="text-align:center;font-weight:bold;">
+    OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort. <br><br>
+    Que ce soit pour vos trajets personnels, professionnels, vers la gare ou l'aéroport, nous vous garantissons un service de qualité, rapide et fiable. <br><br>
+    Réservez facilement votre trajet en ligne et obtenez une estimation claire de votre tarif à l’avance, sans surprise.
+  </p>
+</div>
     .buttons {
       display: flex;
       flex-wrap: wrap;
