--- a/index.html
+++ b/index.html
@@ -116,7 +116,18 @@
 
   <div class="container">
     <img src="voiture.png" alt="Voiture VTC" class="car-image" />
-
+<div class="info">
+  <h2>OuassVTC – Votre service de transport privé à Perpignan</h2>
+  <p>
+    OuassVTC vous propose un service de transport privé à Perpignan et ses environs. Nos chauffeurs professionnels, expérimentés et discrets sont à votre disposition 7j/7 pour assurer tous vos déplacements dans les meilleures conditions de ponctualité, de sécurité et de confort.
+  </p>
+  <p>
+    Que ce soit pour un trajet personnel, professionnel, ou pour vos transferts vers la gare ou l’aéroport, nous mettons un point d’honneur à vous offrir une prestation fiable, rapide et de qualité.
+  </p>
+  <p>
+    Réservez votre course en quelques clics via notre plateforme en ligne et bénéficiez d’une estimation tarifaire transparente, sans frais cachés ni mauvaises surprises.
+  </p>
+</div>
     <div class="buttons">
       <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
       <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
