--- a/index.html
+++ b/index.html
@@ -128,6 +128,16 @@
     Réservez votre course en quelques clics via notre plateforme en ligne et bénéficiez d’une estimation tarifaire transparente, sans frais cachés ni mauvaises surprises.
   </p>
 </div>
+    <div class="info">
+  <h2>OUASS – Nos valeurs au service de votre confort</h2>
+  <ul style="text-align:left; max-width:600px; margin:0 auto; list-style:none; padding-left:0;">
+    <li><strong>Organiser</strong> : Des trajets planifiés et sans stress.</li>
+    <li><strong>Utile</strong> : Un service pensé pour répondre à vos besoins.</li>
+    <li><strong>Agile</strong> : Une adaptation rapide à toutes les situations.</li>
+    <li><strong>Sécurité</strong> : Votre bien-être est notre priorité.</li>
+    <li><strong>Service</strong> : Une attention de chaque instant.</li>
+  </ul>
+</div>
     <div class="buttons">
       <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
       <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
