--- a/index.html
+++ b/index.html
@@ -129,13 +129,28 @@
   </p>
 </div>
     <div class="info">
-  <div style="text-align:center; margin-top:30px; font-weight:bold;">
-  <p><span style="color:#007bff; font-size: 20px;">O</span>rganiser vos trajets en toute simplicité</p>
-  <p><span style="color:#007bff; font-size: 20px;">U</span>tile pour tous vos déplacements</p>
-  <p><span style="color:#007bff; font-size: 20px;">A</span>gile et toujours à l'heure</p>
-  <p><span style="color:#007bff; font-size: 20px;">S</span>écurité garantie avec des chauffeurs professionnels</p>
-  <p><span style="color:#007bff; font-size: 20px;">S</span>ervice de qualité à votre écoute</p>
+<div style="max-width: 400px; margin: 40px auto; font-weight: bold; font-size: 18px;">
+  <div style="display: flex; align-items: baseline;">
+    <span style="color:#007bff; font-size: 24px; min-width: 30px;">O</span>
+    <span>rganiser vos trajets en toute simplicité</span>
   </div>
+  <div style="display: flex; align-items: baseline;">
+    <span style="color:#007bff; font-size: 24px; min-width: 30px;">U</span>
+    <span>tile pour tous vos déplacements</span>
+  </div>
+  <div style="display: flex; align-items: baseline;">
+    <span style="color:#007bff; font-size: 24px; min-width: 30px;">A</span>
+    <span>gile et toujours à l'heure</span>
+  </div>
+  <div style="display: flex; align-items: baseline;">
+    <span style="color:#007bff; font-size: 24px; min-width: 30px;">S</span>
+    <span>écurité garantie avec des chauffeurs professionnels</span>
+  </div>
+  <div style="display: flex; align-items: baseline;">
+    <span style="color:#007bff; font-size: 24px; min-width: 30px;">S</span>
+    <span>ervice de qualité à votre écoute</span>
+  </div>
+</div>
     <div class="buttons">
       <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
       <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
