--- a/index.html
+++ b/index.html
@@ -132,23 +132,23 @@
 <div style="max-width: 400px; margin: 40px auto; font-weight: bold; font-size: 18px;">
   <div style="display: flex; align-items: baseline;">
     <span style="color:#007bff; font-size: 24px; min-width: 30px;">O</span>
-    <span>rganiser vos trajets en toute simplicité</span>
+    <span>rganiser vos trajets</span>
   </div>
   <div style="display: flex; align-items: baseline;">
     <span style="color:#007bff; font-size: 24px; min-width: 30px;">U</span>
-    <span>tile pour tous vos déplacements</span>
+    <span>tile pour tous déplacements</span>
   </div>
   <div style="display: flex; align-items: baseline;">
     <span style="color:#007bff; font-size: 24px; min-width: 30px;">A</span>
-    <span>gile et toujours à l'heure</span>
+    <span>gile et ponctuel</span>
   </div>
   <div style="display: flex; align-items: baseline;">
     <span style="color:#007bff; font-size: 24px; min-width: 30px;">S</span>
-    <span>écurité garantie avec des chauffeurs professionnels</span>
+    <span>écurité garantie</span>
   </div>
   <div style="display: flex; align-items: baseline;">
     <span style="color:#007bff; font-size: 24px; min-width: 30px;">S</span>
-    <span>ervice de qualité à votre écoute</span>
+    <span>ervice de qualité</span>
   </div>
 </div>
     <div class="buttons">
