--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   </div>
   <div style="display: flex; align-items: baseline;">
     <span style="color:#007bff; font-size: 24px; min-width: 30px;">U</span>
-    <span>tile pour tous déplacements</span>
+    <span>tile pour tous vos déplacements</span>
   </div>
   <div style="display: flex; align-items: baseline;">
     <span style="color:#007bff; font-size: 24px; min-width: 30px;">A</span>
